// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagnosticMini component not on mobile should render when there are diagnostics 1`] = `
<DiagnosticMini
  diagnostics={
    Array [
      Object {
        "activity_id": 447,
        "activity_name": "ELL Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 447,
        "activity_name": "ELL Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 5,
        "unit_id": 826268,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 850,
        "activity_name": "Intermediate Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 850,
        "activity_name": "Intermediate Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 888,
        "activity_name": "Advanced Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 888,
        "activity_name": "Advanced Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 992,
        "activity_name": "AP® Writing Skills Survey",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 992,
        "activity_name": "AP® Writing Skills Survey",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1161,
        "activity_name": "ELL Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1161,
        "activity_name": "ELL Starter Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1229,
        "activity_name": "Pre-AP® Writing Skills Survey 1: Basics of Sentence Patterns",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1229,
        "activity_name": "Pre-AP® Writing Skills Survey 1: Basics of Sentence Patterns",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1230,
        "activity_name": "Pre-AP® Writing Skills Survey 2: Tools for Sentence Expansion",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1230,
        "activity_name": "Pre-AP® Writing Skills Survey 2: Tools for Sentence Expansion",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
    ]
  }
  onMobile={false}
>
  <section
    className="diagnostic-mini"
  >
    <header>
      <h2>
        <span>
          Diagnostic 
        </span>
        <span
          className="no-break"
        >
          <span>
            results
          </span>
          <a
            className="focus-on-light"
            href="https://support.quill.org/en/articles/5014101-how-does-the-diagnostic-recommendations-section-on-the-teacher-home-page-work"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Question mark icon"
              src="undefined/images/icons/icons-help.svg"
            />
          </a>
        </span>
      </h2>
    </header>
    <DataTable
      averageFontWidth={7}
      headers={
        Array [
          Object {
            "attribute": "diagnostic",
            "name": "Diagnostic",
            "width": "300px",
          },
          Object {
            "attribute": "classroom",
            "name": "Class",
            "width": "180px",
          },
          Object {
            "attribute": "completed",
            "name": "Completed",
            "rowSectionClassName": "completed-row-section",
            "width": "62px",
          },
          Object {
            "attribute": "results",
            "headerClassName": "last-header",
            "name": "Results",
            "noTooltip": true,
            "rowSectionClassName": "last-row-section",
            "width": "62px",
          },
        ]
      }
      rows={
        Array [
          Object {
            "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
            "completed": "0 of 5",
            "diagnostic": "ELL Diagnostic",
            "id": "447-484134-826269",
            "results": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484134/summary?unit=826269"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484134/summary?unit=826269",
          },
          Object {
            "classroom": "A New Class",
            "completed": "0 of 0",
            "diagnostic": "ELL Diagnostic",
            "id": "447-484135-826269",
            "results": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484135/summary?unit=826269"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484135/summary?unit=826269",
          },
          Object {
            "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
            "completed": "5 of 5",
            "diagnostic": "Starter Diagnostic",
            "id": "849-484134-826268",
            "results": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826268"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826268",
          },
          Object {
            "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
            "completed": "0 of 5",
            "diagnostic": "Starter Diagnostic",
            "id": "849-484134-826269",
            "results": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826269"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826269",
          },
          Object {
            "classroom": "A New Class",
            "completed": "0 of 0",
            "diagnostic": "Starter Diagnostic",
            "id": "849-484135-826269",
            "results": <a
              className="focus-on-light"
              href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484135/summary?unit=826269"
            >
              <img
                alt="File with a chart icon"
                src="undefined/images/icons/icons-file-chart.svg"
              />
              <span>
                View
              </span>
            </a>,
            "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484135/summary?unit=826269",
          },
        ]
      }
    >
      <div
        className="data-table undefined"
      >
        <div
          className="data-table-headers"
        >
          <th
            className="data-table-header undefined"
            style={
              Object {
                "minWidth": "300px",
                "textAlign": "left",
                "width": "300px",
              }
            }
          >
            Diagnostic
          </th>
          <th
            className="data-table-header undefined"
            style={
              Object {
                "minWidth": "180px",
                "textAlign": "left",
                "width": "180px",
              }
            }
          >
            Class
          </th>
          <th
            className="data-table-header undefined"
            style={
              Object {
                "minWidth": "62px",
                "textAlign": "left",
                "width": "62px",
              }
            }
          >
            Completed
          </th>
          <th
            className="data-table-header last-header"
            style={
              Object {
                "minWidth": "62px",
                "textAlign": "left",
                "width": "62px",
              }
            }
          >
            Results
          </th>
        </div>
        <div
          className="data-table-body"
        >
          <div
            className="data-table-row  "
            key="447-484134-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-447-484134-826269"
              style={
                Object {
                  "minWidth": "300px",
                  "textAlign": "left",
                  "width": "300px",
                }
              }
            >
              ELL Diagnostic
            </span>
            <Tooltip
              isTabbable={true}
              key="classroom-447-484134-826269"
              tooltipText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
              tooltipTriggerText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerTextClass="data-table-row-section undefined"
              tooltipTriggerTextStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              <span
                aria-hidden={false}
                className="quill-tooltip-trigger"
                role="tooltip"
                style={
                  Object {
                    "minWidth": "180px",
                    "textAlign": "left",
                    "width": "180px",
                  }
                }
              >
                <span
                  className="data-table-row-section undefined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  style={
                    Object {
                      "minWidth": "180px",
                      "textAlign": "left",
                      "width": "180px",
                    }
                  }
                  tabIndex={0}
                >
                  Quill Classroom Extremely Long So Long SUper Duper
                </span>
                <span
                  className="quill-tooltip-wrapper"
                >
                  <span
                    aria-live="polite"
                    className="quill-tooltip"
                  />
                </span>
              </span>
            </Tooltip>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-447-484134-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 5
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="results-447-484134-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484134/summary?unit=826269"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="447-484135-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-447-484135-826269"
              style={
                Object {
                  "minWidth": "300px",
                  "textAlign": "left",
                  "width": "300px",
                }
              }
            >
              ELL Diagnostic
            </span>
            <span
              className="data-table-row-section undefined"
              key="classroom-447-484135-826269"
              style={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              A New Class
            </span>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-447-484135-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 0
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="results-447-484135-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484135/summary?unit=826269"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="849-484134-826268"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-849-484134-826268"
              style={
                Object {
                  "minWidth": "300px",
                  "textAlign": "left",
                  "width": "300px",
                }
              }
            >
              Starter Diagnostic
            </span>
            <Tooltip
              isTabbable={true}
              key="classroom-849-484134-826268"
              tooltipText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
              tooltipTriggerText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerTextClass="data-table-row-section undefined"
              tooltipTriggerTextStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              <span
                aria-hidden={false}
                className="quill-tooltip-trigger"
                role="tooltip"
                style={
                  Object {
                    "minWidth": "180px",
                    "textAlign": "left",
                    "width": "180px",
                  }
                }
              >
                <span
                  className="data-table-row-section undefined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  style={
                    Object {
                      "minWidth": "180px",
                      "textAlign": "left",
                      "width": "180px",
                    }
                  }
                  tabIndex={0}
                >
                  Quill Classroom Extremely Long So Long SUper Duper
                </span>
                <span
                  className="quill-tooltip-wrapper"
                >
                  <span
                    aria-live="polite"
                    className="quill-tooltip"
                  />
                </span>
              </span>
            </Tooltip>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-849-484134-826268"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              5 of 5
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="results-849-484134-826268"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826268"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="849-484134-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-849-484134-826269"
              style={
                Object {
                  "minWidth": "300px",
                  "textAlign": "left",
                  "width": "300px",
                }
              }
            >
              Starter Diagnostic
            </span>
            <Tooltip
              isTabbable={true}
              key="classroom-849-484134-826269"
              tooltipText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
              tooltipTriggerText="Quill Classroom Extremely Long So Long SUper Duper"
              tooltipTriggerTextClass="data-table-row-section undefined"
              tooltipTriggerTextStyle={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              <span
                aria-hidden={false}
                className="quill-tooltip-trigger"
                role="tooltip"
                style={
                  Object {
                    "minWidth": "180px",
                    "textAlign": "left",
                    "width": "180px",
                  }
                }
              >
                <span
                  className="data-table-row-section undefined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  style={
                    Object {
                      "minWidth": "180px",
                      "textAlign": "left",
                      "width": "180px",
                    }
                  }
                  tabIndex={0}
                >
                  Quill Classroom Extremely Long So Long SUper Duper
                </span>
                <span
                  className="quill-tooltip-wrapper"
                >
                  <span
                    aria-live="polite"
                    className="quill-tooltip"
                  />
                </span>
              </span>
            </Tooltip>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-849-484134-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 5
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="results-849-484134-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826269"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
          <div
            className="data-table-row  "
            key="849-484135-826269"
          >
            <span
              className="data-table-row-section undefined"
              key="diagnostic-849-484135-826269"
              style={
                Object {
                  "minWidth": "300px",
                  "textAlign": "left",
                  "width": "300px",
                }
              }
            >
              Starter Diagnostic
            </span>
            <span
              className="data-table-row-section undefined"
              key="classroom-849-484135-826269"
              style={
                Object {
                  "minWidth": "180px",
                  "textAlign": "left",
                  "width": "180px",
                }
              }
            >
              A New Class
            </span>
            <span
              className="data-table-row-section completed-row-section"
              key="completed-849-484135-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              0 of 0
            </span>
            <span
              className="data-table-row-section last-row-section"
              key="results-849-484135-826269"
              style={
                Object {
                  "minWidth": "62px",
                  "textAlign": "left",
                  "width": "62px",
                }
              }
            >
              <a
                className="focus-on-light"
                href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484135/summary?unit=826269"
              >
                <img
                  alt="File with a chart icon"
                  src="undefined/images/icons/icons-file-chart.svg"
                />
                <span>
                  View
                </span>
              </a>
            </span>
            <span
              className="removable data-table-row-section"
            />
          </div>
        </div>
      </div>
    </DataTable>
    <button
      className="bottom-button focus-on-light interactive-wrapper"
      onClick={[Function]}
      type="button"
    >
      Show more 
      <img
        alt="Expand icon"
        src="undefined/images/icons/expand.svg"
      />
    </button>
  </section>
</DiagnosticMini>
`;

exports[`DiagnosticMini component not on mobile should render when there are no diagnostics 1`] = `
<DiagnosticMini
  diagnostics={Array []}
  onMobile={false}
>
  <span />
</DiagnosticMini>
`;

exports[`DiagnosticMini component on mobile should render when there are diagnostics 1`] = `
<DiagnosticMini
  diagnostics={
    Array [
      Object {
        "activity_id": 447,
        "activity_name": "ELL Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 447,
        "activity_name": "ELL Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 5,
        "unit_id": 826268,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 849,
        "activity_name": "Starter Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 850,
        "activity_name": "Intermediate Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 850,
        "activity_name": "Intermediate Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 888,
        "activity_name": "Advanced Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 888,
        "activity_name": "Advanced Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 992,
        "activity_name": "AP® Writing Skills Survey",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 992,
        "activity_name": "AP® Writing Skills Survey",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1161,
        "activity_name": "ELL Starter Diagnostic",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1161,
        "activity_name": "ELL Starter Diagnostic",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1229,
        "activity_name": "Pre-AP® Writing Skills Survey 1: Basics of Sentence Patterns",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1229,
        "activity_name": "Pre-AP® Writing Skills Survey 1: Basics of Sentence Patterns",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1230,
        "activity_name": "Pre-AP® Writing Skills Survey 2: Tools for Sentence Expansion",
        "assigned_count": 5,
        "classroom_id": 484134,
        "classroom_name": "Quill Classroom Extremely Long So Long SUper Duper",
        "completed_count": 0,
        "unit_id": 826269,
      },
      Object {
        "activity_id": 1230,
        "activity_name": "Pre-AP® Writing Skills Survey 2: Tools for Sentence Expansion",
        "assigned_count": 0,
        "classroom_id": 484135,
        "classroom_name": "A New Class",
        "completed_count": 0,
        "unit_id": 826269,
      },
    ]
  }
  onMobile={true}
>
  <section
    className="diagnostic-mini"
  >
    <header>
      <h2>
        <span>
          Diagnostic 
        </span>
        <span
          className="no-break"
        >
          <span>
            results
          </span>
          <a
            className="focus-on-light"
            href="https://support.quill.org/en/articles/5014101-how-does-the-diagnostic-recommendations-section-on-the-teacher-home-page-work"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Question mark icon"
              src="undefined/images/icons/icons-help.svg"
            />
          </a>
        </span>
      </h2>
    </header>
    <MobileRecommendationRow
      key="447-484134-826269"
      row={
        Object {
          "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
          "completed": "0 of 5",
          "diagnostic": "ELL Diagnostic",
          "id": "447-484134-826269",
          "results": <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484134/summary?unit=826269"
          >
            <img
              alt="File with a chart icon"
              src="undefined/images/icons/icons-file-chart.svg"
            />
            <span>
              View
            </span>
          </a>,
          "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484134/summary?unit=826269",
        }
      }
    >
      <div
        className="mobile-data-row"
      >
        <div
          className="top-row"
        >
          <span>
            ELL Diagnostic
          </span>
          <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484134/summary?unit=826269"
          >
            View
          </a>
        </div>
        <div>
          Quill Classroom Extremely Long So Long SUper Duper
        </div>
      </div>
    </MobileRecommendationRow>
    <MobileRecommendationRow
      key="447-484135-826269"
      row={
        Object {
          "classroom": "A New Class",
          "completed": "0 of 0",
          "diagnostic": "ELL Diagnostic",
          "id": "447-484135-826269",
          "results": <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484135/summary?unit=826269"
          >
            <img
              alt="File with a chart icon"
              src="undefined/images/icons/icons-file-chart.svg"
            />
            <span>
              View
            </span>
          </a>,
          "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484135/summary?unit=826269",
        }
      }
    >
      <div
        className="mobile-data-row"
      >
        <div
          className="top-row"
        >
          <span>
            ELL Diagnostic
          </span>
          <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/447/classroom/484135/summary?unit=826269"
          >
            View
          </a>
        </div>
        <div>
          A New Class
        </div>
      </div>
    </MobileRecommendationRow>
    <MobileRecommendationRow
      key="849-484134-826268"
      row={
        Object {
          "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
          "completed": "5 of 5",
          "diagnostic": "Starter Diagnostic",
          "id": "849-484134-826268",
          "results": <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826268"
          >
            <img
              alt="File with a chart icon"
              src="undefined/images/icons/icons-file-chart.svg"
            />
            <span>
              View
            </span>
          </a>,
          "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826268",
        }
      }
    >
      <div
        className="mobile-data-row"
      >
        <div
          className="top-row"
        >
          <span>
            Starter Diagnostic
          </span>
          <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826268"
          >
            View
          </a>
        </div>
        <div>
          Quill Classroom Extremely Long So Long SUper Duper
        </div>
      </div>
    </MobileRecommendationRow>
    <MobileRecommendationRow
      key="849-484134-826269"
      row={
        Object {
          "classroom": "Quill Classroom Extremely Long So Long SUper Duper",
          "completed": "0 of 5",
          "diagnostic": "Starter Diagnostic",
          "id": "849-484134-826269",
          "results": <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826269"
          >
            <img
              alt="File with a chart icon"
              src="undefined/images/icons/icons-file-chart.svg"
            />
            <span>
              View
            </span>
          </a>,
          "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826269",
        }
      }
    >
      <div
        className="mobile-data-row"
      >
        <div
          className="top-row"
        >
          <span>
            Starter Diagnostic
          </span>
          <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484134/summary?unit=826269"
          >
            View
          </a>
        </div>
        <div>
          Quill Classroom Extremely Long So Long SUper Duper
        </div>
      </div>
    </MobileRecommendationRow>
    <MobileRecommendationRow
      key="849-484135-826269"
      row={
        Object {
          "classroom": "A New Class",
          "completed": "0 of 0",
          "diagnostic": "Starter Diagnostic",
          "id": "849-484135-826269",
          "results": <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484135/summary?unit=826269"
          >
            <img
              alt="File with a chart icon"
              src="undefined/images/icons/icons-file-chart.svg"
            />
            <span>
              View
            </span>
          </a>,
          "summaryHref": "/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484135/summary?unit=826269",
        }
      }
    >
      <div
        className="mobile-data-row"
      >
        <div
          className="top-row"
        >
          <span>
            Starter Diagnostic
          </span>
          <a
            className="focus-on-light"
            href="/teachers/progress_reports/diagnostic_reports#diagnostics/849/classroom/484135/summary?unit=826269"
          >
            View
          </a>
        </div>
        <div>
          A New Class
        </div>
      </div>
    </MobileRecommendationRow>
    <button
      className="bottom-button focus-on-light interactive-wrapper"
      onClick={[Function]}
      type="button"
    >
      Show more 
      <img
        alt="Expand icon"
        src="undefined/images/icons/expand.svg"
      />
    </button>
  </section>
</DiagnosticMini>
`;

exports[`DiagnosticMini component on mobile should render when there are no diagnostics 1`] = `
<DiagnosticMini
  diagnostics={Array []}
  onMobile={true}
>
  <span />
</DiagnosticMini>
`;
